--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <script src="js/skel.min.js"></script>
-        <script src="js/init.js"></script>
+        <script src="js/init.min.js"></script>
         <noscript>
-        <link rel="stylesheet" href="css/skel.css" />
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/skel.min.css" />
+        <link rel="stylesheet" href="css/style.min.css" />
         <link rel="stylesheet" href="css/style-wide.css" />
         <link rel="stylesheet" href="css/style-noscript.css" />
         </noscript>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     </head>
     <body class="loading">
         <div id="wrapper">
@@ -43,7 +42,7 @@
                 </header>
                 <!-- Footer -->
                 <footer id="footer">
-                    <span class="copyright"><a href="http://omsklug.com" target="_blank">OmskLUG</a> - Омская группа пользователей Linux. Design:<a href="http://html5up.net/aerial">HTML5 UP</a> ...and modifyed by <a href="https://github.com/sstopkin" target="_blank">Altf1</a></span>
+                    <span class="copyright"><a href="http://omsklug.com" target="_blank">OmskLUG</a> - Омская группа пользователей Linux. Design:<a href="http://html5up.net/aerial">HTML5 UP</a> ...and modified by <a href="https://github.com/sstopkin" target="_blank">Altf1</a></span>
                 </footer>
             </div>
         </div>
