--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script src="js/init.min.js"></script>
         <noscript>
         <link rel="stylesheet" href="css/skel.min.css" />
-        <link rel="stylesheet" href="css/style.min.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/style-wide.css" />
         <link rel="stylesheet" href="css/style-noscript.css" />
         </noscript>
