update meta information

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <head>
         <title>OmskLUG - Здесь пока ничего нет</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta name="description" content="" />
-        <meta name="keywords" content="" />
+        <meta name="description" content="Омская группа пользователей GNU/Linuх, а также иных свободных дистрибутивов: FreeBSD, Haiku, ReactOS, KolibriOS" />
+        <meta name="keywords" content="GNU, FOSS, FLOSS, Linux, Omsk, Омск, Ubuntu, FreeBSD, Haiku, ReactOS, KolibriOS, Android, Blender, GNOME, Firefox, GIMP, WINE, омские линуксоиды, дистрибутивы, свобода, Install Fest, SFD, HOWTO" /> 
         <script src="js/skel.min.js"></script>
         <script src="js/init.min.js"></script>
         <noscript>
