update http->https in social links

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     <p>Omsk &nbsp;&bull;&nbsp; Linux &nbsp;&bull;&nbsp; GNU</p>
                     <nav>
                         <ul>
-                            <li><a href="http://twitter.com/#!/omsklug" class="fa fa-twitter"><span>Twitter</span></a></li>
-                            <li><a href="http://www.facebook.com/groups/omsklinuxusergroup/" class="fa fa-facebook"><span>Facebook</span></a></li>
-                            <li><a href="http://vkontakte.ru/omsklug" class="fa fa-vk"><span>VK</span></a></li>
+                            <li><a href="https://twitter.com/#!/omsklug" class="fa fa-twitter"><span>Twitter</span></a></li>
+                            <li><a href="https://www.facebook.com/groups/omsklinuxusergroup/" class="fa fa-facebook"><span>Facebook</span></a></li>
+                            <li><a href="https://vkontakte.ru/omsklug" class="fa fa-vk"><span>VK</span></a></li>
                             <li><a href="https://groups.google.com/forum/#!forum/omsklug" class="fa fa-google-plus"><span>G+</span></a></li>
                             <li><a href="mailto:post@omsklug.com" class="fa fa-envelope"><span>Email</span></a></li>
                         </ul>
