--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <html>
     <head>
         <title>OmskLUG - Здесь пока ничего нет</title>
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="description" content="Омская группа пользователей GNU/Linuх, а также иных свободных дистрибутивов: FreeBSD, Haiku, ReactOS, KolibriOS" />
         <meta name="keywords" content="GNU, FOSS, FLOSS, Linux, Omsk, Омск, Ubuntu, FreeBSD, Haiku, ReactOS, KolibriOS, Android, Blender, GNOME, Firefox, GIMP, WINE, омские линуксоиды, дистрибутивы, свобода, Install Fest, SFD, HOWTO" /> 
