--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         </noscript>
     </head>
     <body class="loading">
+        <noscript>
+            You need to enable JavaScript to run this app.
+        </noscript>
         <div id="wrapper">
             <div id="bg"></div>
             <div id="overlay"></div>
